tests/NormalTests/paczka2/big_fuzzy/57580996.err
Error in line 12: QKUiR S896 73,5
Error in line 32: A746 S287 370,7
Error in line 35: Rsrby2rKD 896 2,3
Error in line 36: VvpZvZOEX1 A993 13,0
Error in line 26: QKUiR S287 19,5
Error in line 33: A746 A746 68,2
Error in line 48: NSPQqmn3B A993 30,6
Error in line 56: QKUiR A993 11,7
Error in line 58: NSPQqmn3B S896 86,0
Error in line 59: QKUiR S896 66,3
Error in line 62: NSPQqmn3B A746 20,6
Error in line 57: fTtFV S896 126,0
Error in line 79: fTtFV A746 23,2
Error in line 75: A746 S896 39,8
Error in line 87: fTtFV S896 57,3
Error in line 96: fTtFV A746 119,1
Error in line 100: Rsrby2rSKD S287 93,4
Error in line 103: NSPQqmn3B S287 35,7
Error in line 137: axekQtQkAsl A993 200,6
Error in line 153: fTtFV S287 10,2
Error in line 155: fTtFV S896 65,7
Error in line 162: Rsrby2rSKD A746 54,8
Error in line 165: QKUiR S287 38,6
Error in line 163: NSPQqmn3B A746 68,2
Error in line 172: axekQtQkAsl S896 45,2
Error in line 161: fTtFV A746 1,7
Error in line 183: VvpZvZOEX1 A746 23,0
Error in line 181: Rsrby2rSKD A746 18,7
Error in line 191: QKUiR A993 25,8
Error in line 187: Rsrby2rSKD S896 83,7
Error in line 208: Rsrby2rSKD S896 96,0
Error in line 212: A746 S287 15,6
Error in line 226: NSPQqmn3B A746 67,4
Error in line 224: VvpZvZOEX1 S896 70,2
Error in line 234: VvpZvZOEX1 A746 66,9
Error in line 246: QKUiR S896 69,83
